chore(config): 添加 Claude AI 权限配置文件
- 配置 MCP 插件权限包括上下文解析、文档查询、网络搜索等功能
- 添加 GitHub 相关操作权限如提交历史查看、文件内容获取等
- 设置 Bash 命令执行权限涵盖 Maven、Git、NPM 等开发工具
- 配置文件读取权限用于访问工作目录和临时文件
- 添加进程管理和网络请求相关权限